--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redux-react-navigation-debouncer",
+  "name": "redux-debouncer",
   "version": "1.0.0",
   "description": "debouncer for react navigation and redux",
   "main": "lib/index.js",
@@ -35,7 +35,10 @@
     "sinon": "^7.2.4"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.3.4"
+    "@babel/preset-env": "^7.3.4",
+    "install": "^0.12.2",
+    "invariant": "^2.2.4",
+    "npm": "^6.8.0"
   },
   "ava": {
     "require": [
