--- a/package.json
+++ b/package.json
@@ -35,10 +35,7 @@
     "sinon": "^7.2.4"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.3.4",
-    "install": "^0.12.2",
-    "invariant": "^2.2.4",
-    "npm": "^6.8.0"
+    "@babel/preset-env": "^7.3.4"
   },
   "ava": {
     "require": [
